<resources>
    <string name="app_name">BondBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">вход в аккаунт</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="create_account">регистрация</string>
    <string name="enter_name">username</string>
    <string name="confirm_password">password</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="register">зарегистрироваться</string>
    <string name="name">имя</string>
    <string name="logout">выход из аккаунта</string>
    <string name="account">аккаунт</string>
    <string name="delete_interest">удалить</string>
    <string name="savedTitle">Сохраненные</string>
    <string name="DiscoverFragmentTitle">Рекомендации</string>
    <string name="EmptyListLabel">Список пуст</string>
</resources>